[tool.poetry]
name = "ecodev-front"
version = "0.0.49"
description = "Dash component helpers"
authors = ["Amaury Salles <amaury.salles@gmail.com>",
					 "Yoann Diep <yoann.diep@hotmail.fr>",
                        "Thomas Epelbaum <tomepel@gmail.com>",
					 "Olivier Gabriel <olivier.gabriel.geom@gmail.com>",
					 "Dorian Kodelja <dorian.kodelja@gmail.com>",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP"
]
packages = [{include = "ecodev_front"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "~2"
dash-ag-grid = "~2"
dash-iconify = "~0"
dash-mantine-components = "~0"
plotly = "~5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
